# ComfyUI-CraftKit

./: .gitignore  README.md  __init__.py  pyproject.toml  smart_batch_controller.py  smart_batch_resize.py  smart_profile_switch.py  smart_prompt_controller.py  smart_resize.py  smart_resolution_multiplier.py  smart_size_multiplier.py
example_workflows/: seedvr2_smartresize_demo.json  smart_batch_resize_demo.json  smart_prompt_controller_demo.json
js/: smart_batch_controller.js  smart_batch_resize.js  smart_profile_switch.js  smart_prompt_controller.js  smart_resize.js
locales/en/: nodeDefs.json
