[project]
name = "comfyui-craftkit"
description = "Smart resize, batch resize, resolution multiplier and prompt controller nodes for ComfyUI"
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/CraftopiaStudio/ComfyUI-CraftKit"

[tool.comfy]
PublisherId = "craftopiastudio"
DisplayName = "ComfyUI-CraftKit"
Icon = "https://raw.githubusercontent.com/CraftopiaStudio/ComfyUI-CraftKit/main/assets/icon.png"